# wcastats.com

./: .gitignore  README.md
backend/: main.py
docs/: Untitled Diagram.drawio  WCA stats architecture.drawio  postgresql_schema_design_wcastats_mvp.md  user_db_schema_design_decisions.md
wca_db_etl/developer_export_testing/: write_developer_export_to_duckdb.py
wca_db_etl/lambda/: download_wca_db.py
wca_db_etl/lambda/download_wca_db/: lambda_function.py  pyproject.toml  requirements.txt
