[project]
name = "download-wca-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.43.14",
    "botocore==1.43.14",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "idna==3.16",
    "jmespath==1.1.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "s3transfer==0.17.0",
    "six==1.17.0",
    "tzdata==2026.2 ; sys_platform == 'emscripten' or sys_platform == 'win32'",
    "urllib3==2.7.0",
]
